33: Added Tests (#36)
* testing

* Revert "testing"

This reverts commit 92a583636977aed1b7531ca6d2495cfe28644dfc.

* 33: Added Tests

* 33: JavaDoc

* Moved User Control and User Group

* 33: Add JavaDoc

* 33: Updated JavaDoc

* 33: Updated JavaDoc

* 33: House Layout Test

Co-authored-by: TianMing <tianming.chen0424@gmail.com>