@@ -44,6 +44,14 @@ dependencies {
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+tasks.withType(JavaExec) {
+    jvmArgs += "--enable-preview"
+}
+
 test {
     useJUnitPlatform()
+    jvmArgs("--enable-preview")
 }
